--- a/params/plotting.yaml
+++ b/params/plotting.yaml
@@ -10,7 +10,8 @@ plotting_style:
       - ZZ
 
   exclude_samples:
-    - DYJetsToLL_FxFx
+    - DYJetsToLL_MLM
+    #- DYJetsToLL_FxFx
     - DYJetsToLL_MiNNLO
     - DYJetsToLL_MiNNLO_ZptWei
 
