--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Related to our code
+*~
+datasets/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -25,8 +29,6 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
-*~
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
