Cosmetic changes to the trainings.yaml Config_dir added; removed print statements from the workflow

--- a/params/trainings.yaml
+++ b/params/trainings.yaml
@@ -2,172 +2,172 @@ Models:
   'BDT':
     '2L_high':
       '2016_PreVFP':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
       '2016_PostVFP':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
       '2017':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
       '2018':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
       '2022_preEE':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
-      '2022_post_EE':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+      '2022_postEE':
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
       '2023_preBPix':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
       '2023_postBPix':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_high_model_DY.txt'
     '2L_low':
       '2016_PreVFP':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2016_PostVFP':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2017':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2018':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2022_preEE':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2022_postEE':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2023_preBPix':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
       '2023_postBPix':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_low_model_DY.txt'
     '2L':
       '2016_PreVFP':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2016_PostVFP':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2017':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2018':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2022_preEE':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2022_postEE':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2023_preBPix':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
       '2023_postBPix':
-        model_file: 'MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
+        model_file: '${config_dir:}/../MVA/BDT_models/ZH_Hto2C_Zto2L_2022_postEE_model_DY.txt'
     '1L':
       '2016_PreVFP':
-         model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2016_PostVFP':
-         model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2017':
-         model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2018':
-         model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2022_preEE':
-         model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2022_postEE':
-          model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2023_preBPix':
-          model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
       '2023_postBPix':
-          model_file: 'MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/signalCombo_WminusH_HToCC_WToLNu_2017_model_QCD.txt'
     '0L':
       '2016_PreVFP':
-         model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2016_PostVFP':
-          model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+          model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2017':
-         model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+         model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2018':
-          model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+          model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2022_preEE':
-          model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+          model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2022_postEE':
-          model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+          model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2023_preBPix':
-          model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+          model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
       '2023_postBPix':
-          model_file: 'MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
+          model_file: '${config_dir:}/../MVA/BDT_models/ZH_HToCC_ZToNuNu_2017_model_QCD.txt'
   'DNN':
     '2L_high':
       '2016_PreVFP':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
       '2016_PostVFP':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
       '2017':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
       '2018':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
       '2022_preEE':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
-      '2022_post_EE':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+      '2022_postEE':
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
       '2023_preBPix':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
       '2023_postBPix':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_high_dnn_model_DY.h5'
     '2L_low':
       '2016_PreVFP':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
       '2016_PostVFP':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
       '2017':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
       '2018':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
       '2022_preEE':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
-      '2022_PostEE':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+      '2022_postEE':
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
       '2023_preBPix':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
       '2023_postBPix':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_low_dnn_model_DY.h5'
     '2L':
       '2016_PreVFP':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
       '2016_PostVFP':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
       '2017':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
       '2018':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
       '2022_preEE':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
-      '2022_PostEE':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+      '2022_postEE':
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
       '2023_preBPix':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
       '2023_postBPix':
-        model_file: 'MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
+        model_file: '${config_dir:}/../MVA/DNN_models/ZH_Hto2C_Zto2L_2022_postEE_dnn_model.h5'
     '1L':
       '2016_PreVFP':
-         model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+         model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
       '2016_PostVFP':
-          model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
       '2017':
-         model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+         model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
       '2018':
-          model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5' 
+          model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5' 
       '2022_preEE':
-          model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
       '2022_postEE':
-          model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
       '2023_preBPix':
-          model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
       '2023_postBPix':
-          model_file: 'MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/signalCombo_WminusH_HToCC_WToLNu_2017_dnn_model_QCD.h5'
     '0L':
       '2016_PreVFP':
-         model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+         model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2016_PostVFP':
-          model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2017':
-         model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+         model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2018':
-          model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2022_preEE':
-          model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2022_postEE':
-          model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2023_preBPix':
-          model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
       '2023_postBPix':
-          model_file: 'MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
+          model_file: '${config_dir:}/../MVA/DNN_models/ZH_HToCC_ZToNuNu_2017_dnn_model_QCD.h5'
