More changes to shape maker script

--- a/params/shapemaker_vhbb_run3/Zll_Shape.yaml
+++ b/params/shapemaker_vhbb_run3/Zll_Shape.yaml
@@ -1,6 +1,6 @@
 input:
   channel: "2L"
-  eras: "2022_preEE"
+  eras: ["2022_preEE"]
   coffea_file_name: "./output_vhbb_zll_sig_local/output_all.coffea"
   variation: "nominal"
 
@@ -8,11 +8,11 @@ output:
   shapes_file_name: "vhbb_shapes_output.root"
   
 config:
-    example_variable: "dijet_m"
-    example_data: "DATA_DoubleMuon"
-    example_MC: "ZH_Hto2B_Zto2L"
-    example_subsample: "DYJetsToLL_FxFx__DiJet_bx"
-    example_category: "SR_2L2B"
+  example_variable: "dijet_m"
+  example_data: "DATA_DoubleMuon"
+  example_MC: "ZH_Hto2B_Zto2L"
+  example_subsample: "DYJetsToLL_FxFx__DiJet_bx"
+  example_category: "SR_2L2B"
     
 categories:
   SR_2L2B:
