--- a/params/shapemaker_vhcc_run3/Zll_Shape.yaml
+++ b/params/shapemaker_vhcc_run3/Zll_Shape.yaml
@@ -1,54 +1,53 @@
 
 input:
   channel: "2L"
-  eras: "2022_preEE"
-  coffea_file_name: "./output_vhbb_zll_sig_local/output_all.coffea"
+  eras: ["2022_preEE", "2022_postEE"]
   variation: "nominal"
 
 output:
-  shapes_file_name: "vhbb_shapes_output.root"
+  shapes_file_name: "vhcc_shapes_output.root"
   
 config:
-    example_variable: "dijet_m"
-    example_data: "DATA_DoubleMuon"
-    example_MC: "ZH_Hto2B_Zto2L"
-    example_subsample: "DYJetsToLL_FxFx__DiJet_bx"
-    example_category: "SR_2L2B"
+  example_variable: "dijet_m"
+  example_data: "DATA_DoubleMuon"
+  example_MC: "ZH_Hto2C_Zto2L"
+  example_subsample: "DYJetsToLL_FxFx__DiJet_bx"
+  example_category: "SR_ll_2J_cJ"
     
 categories:
   SR_ll_2J_cJ:
-    variable: "DNN"
-    rename: "Zll_SR"
+    observable: "DNN"
+    mata_name: "Zll_SR"
   SR_mm_2J_cJ:
-    variable: "DNN"
-    rename: "Zmm_SR"
+    observable: "DNN"
+    mata_name: "Zmm_SR"
   SR_ee_2J_cJ:
-    variable: "DNN"
-    rename: "Zee_SR"
+    observable: "DNN"
+    mata_name: "Zee_SR"
   CR_mm_2J_HF:
-    variable: "dijet_pt"
-    rename: "Zmm_CR_HF"
+    observable: "dijet_pt"
+    mata_name: "Zmm_CR_HF"
   CR_mm_2J_LF:
-    variable: "dijet_pt"
-    rename: "Zmm_CR_LF"
+    observable: "dijet_pt"
+    mata_name: "Zmm_CR_LF"
   CR_mm_2J_CC:
-    variable: "dijet_pt"
-    rename: "Zmm_CR_CC"
+    observable: "dijet_pt"
+    mata_name: "Zmm_CR_CC"
   CR_mm_4J_TT:
-    variable: "dijet_pt"
-    rename: "Zmm_CR_TT"
+    observable: "dijet_pt"
+    mata_name: "Zmm_CR_TT"
   CR_ee_2J_HF:
-    variable: "dijet_pt"
-    rename: "Zee_CR_HF"
+    observable: "dijet_pt"
+    mata_name: "Zee_CR_HF"
   CR_ee_2J_LF:
-    variable: "dijet_pt"
-    rename: "Zee_CR_LF"
+    observable: "dijet_pt"
+    mata_name: "Zee_CR_LF"
   CR_ee_2J_CC:
-    variable: "dijet_pt"
-    rename: "Zee_CR_CC"
+    observable: "dijet_pt"
+    mata_name: "Zee_CR_CC"
   CR_ee_4J_TT:
-    variable: "dijet_pt"
-    rename: "Zee_CR_TT"
+    observable: "dijet_pt"
+    mata_name: "Zee_CR_TT"
 
 sample_to_process_map:
   DATA_EGamma: "DATA_ee"
