--- a/params/shapemaker_vhbb_run3/Zll_Shape.yaml
+++ b/params/shapemaker_vhbb_run3/Zll_Shape.yaml
@@ -19,7 +19,7 @@ categories:
     mata_name: "Zll_SR"
     
 sample_to_process_map:
-  DATA_EGamma: "data_ob"
+  DATA_EGamma: "data_obs"
   DATA_DoubleMuon: "data_obs"
   ZH_Hto2C_Zto2L: "ZH_hcc"
   ZH_Hto2B_Zto2L: "ZH_hbb"
