--- a/params/run_options.yaml
+++ b/params/run_options.yaml
@@ -2,5 +2,6 @@ retries: 8
 chunksize: 500000
 requirements: >
   ( TotalCpus >= 8) && 
-  ( Machine != "lx3a44.physik.rwth-aachen.de" ) &&  
+  ( Machine != "lx3a44.physik.rwth-aachen.de" ) &&
+  ( Machine != "lx1b50.physik.rwth-aachen.de" ) &&
   ( Machine != "lx3b80.physik.rwth-aachen.de" )
