Adding GNN model, new training, and GNN prediction ability in the workflow

--- a/params/plotting.yaml
+++ b/params/plotting.yaml
@@ -36,7 +36,7 @@ plotting_style:
 #    DYJetsToLL_MLM: 1.33
 
   signal_samples:
-    ZH_Hto2C_Zto2L: 10000
+    ZH_Hto2C_Zto2L: 100
       
   labels_mc:
     DYJetsToLL_MLM: Z+jets (LO)
@@ -82,6 +82,7 @@ plotting_style:
       dijet_m: [100, 150]
       BDT: [0.7, 1]
       DNN: [0.7, 1]
+      GNN: [0.7, 1]
 
   opts_sig:
     histtype: "step"
