Updates to GNN training, new models; shapemaker for WLn and Znn

--- a/params/shapemaker_vhcc_run3/Zll.yaml
+++ b/params/shapemaker_vhcc_run3/Zll.yaml
@@ -1,7 +1,7 @@
 
 input:
   channel: "2L"
-  eras: ["2022_postEE"]
+  eras: ["2022_preEE"]
   variation: "nominal"
 
 output:
@@ -16,13 +16,13 @@ config:
     
 categories:
   SR_ll_2J_cJ:
-    observable: "DNN"
+    observable: "GNN"
     mata_name: "Zll_SR"
   SR_mm_2J_cJ:
-    observable: "DNN"
+    observable: "GNN"
     mata_name: "Zmm_SR"
   SR_ee_2J_cJ:
-    observable: "DNN"
+    observable: "GNN"
     mata_name: "Zee_SR"
   CR_mm_2J_HF:
     observable: "dijet_pt"
