--- a/params/trainings.yaml
+++ b/params/trainings.yaml
@@ -174,9 +174,25 @@ Models:
   'GNN':
     '2L':
       '2022_preEE':
-        model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE_vs_DY/gnn.pt'
-        params: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE_vs_DY/modelparams.pkl'
+        model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE/gnn.pt'
+        params: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE/modelparams.pkl'
       '2022_postEE':                                                         
 #TODO: This is temporary
-        model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE_vs_DY/gnn.pt'
-        params: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE_vs_DY/modelparams.pkl'
+        model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE/gnn.pt'
+        params: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2L_2022_preEE/modelparams.pkl'
+    '1L':
+      '2022_preEE':
+        model_file: '${config_dir:}/../MVA/GNN_models/WH_Hto2C_WtoLNu_2022_preEE/gnn.pt'
+        params: '${config_dir:}/../MVA/GNN_models/WH_Hto2C_WtoLNu_2022_preEE/modelparams.pkl'
+      '2022_postEE':
+#TODO: This is temporary
+        model_file: '${config_dir:}/../MVA/GNN_models/WH_Hto2C_WtoLNu_2022_preEE/gnn.pt'
+        params: '${config_dir:}/../MVA/GNN_models/WH_Hto2C_WtoLNu_2022_preEE/modelparams.pkl'
+    '0L':
+      '2022_preEE':
+        model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2Nu_2022_preEE/gnn.pt'
+        params: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2Nu_2022_preEE/modelparams.pkl'
+      '2022_postEE':
+#TODO: This is temporary
+        model_file: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2Nu_2022_preEE/gnn.pt'
+        params: '${config_dir:}/../MVA/GNN_models/ZH_Hto2C_Zto2Nu_2022_preEE/modelparams.pkl'
